# ha-mqtt-discoverable-cli

./: .gitignore  .mega-linter.yml  .pre-commit-config.yaml  Contributing.md  Dockerfile  Dockerfile.testing  Makefile  README.md  ha-mqtt-discoverable-cli.plugin.zsh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: awesomebot.yml  build-publish.yml  mega-linter.yml  python-tests.yml
ha_mqtt_discoverable_cli/: __init__.py  cli.py  device.py  device_driver.py  hmd.py  sensor_driver.py  settings.py  utils.py
tests/: test_package.py
