[tool.poetry]
name = "ha-mqtt-discoverable-cli"
version = "0.1.0"
description = "CLI tools for the ha-mqtt-discoverable module"
authors = ["Joe Block <jpb@unixorn.net>"]
readme = "README.md"
packages = [{include = "ha_mqtt_discoverable_cli"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
ha-mqtt-discoverable = "^0.7.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
pytest = "^7.2.2"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
