[tool.poetry]
name = "ha-mqtt-discoverable-cli"
version = "0.16.4.1"
description = "CLI tools for the ha-mqtt-discoverable module"
authors = ["Joe Block <jpb@unixorn.net>"]
readme = "README.md"
packages = [{include = "ha_mqtt_discoverable_cli"}]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
gitlike-commands = "^0.3.0"
ha-mqtt-discoverable = "0.16.4"

[tool.poetry.group.dev.dependencies]
flake8 = ">=6,<8"
pre-commit = ">=3.1.1,<5.0.0"
pytest = ">=7.2.2,<9.0.0"
ruff = ">=0.4.4,<0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hmd = 'ha_mqtt_discoverable_cli.hmd:hmd_driver'
hmd-create-binary-sensor = 'ha_mqtt_discoverable_cli.sensor_driver:create_binary_sensor'
hmd-create-device = 'ha_mqtt_discoverable_cli.device_driver:create_device'
hmd-info = 'ha_mqtt_discoverable_cli:module_info'
hmd-module-info = 'ha_mqtt_discoverable_cli:module_info'
hmd-version = 'ha_mqtt_discoverable_cli:module_version'

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 132
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
